Implement user authentication and Google Calendar integration with event synchronization

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ pytest
 httpx
 ruff
 email-validator
-passlib[bcrypt]
+bcrypt==4.0.1
 python-jose[cryptography]
+google-auth-oauthlib 
+google-api-python-client
